--- a/style.css
+++ b/style.css
@@ -1,58 +1,83 @@
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Press Start 2P', monospace;
+  background-color: rgb(0, 17, 0);
+  color: #333;
+  margin: 0;
+  padding: 20px;
 }
 
-  body{
-    height: 100vh;
-    background-color: #2a5298;
-    display: flex;
-    justify-content: center;
-    align-itms: center;
-    font-family:backdrop
-}
-   
-  .caixa-jogo {
-    background: rgba(255, 255, 255, 0.1);
-    padding: 20px;
-    border-radius: 15px;
-    text-align: center;
-    box-shadow: 0 0  20px rgba(0, 0, 0.5, );
+#background-canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
 }
 
-  .caixa-jogo h1 {
-    color: aliceblue;
-    margin-bottom: 20px;
-    font-size: 24px;
+h1 {
+  margin-bottom: 20px;
 }
 
-  canvas {
-    background-color: black;
-    border: 4px, solid #2a5298;
-    border-radius: 10px;
-    display: block;
-    margin: 0 auto 20px auto;
+#gameCanvas {
+  background-color: #000;
+  border: 2px solid hsl(113, 92%, 42%);
+  border-radius: 10px;
+  display: block;
+  margin: 0 auto 20px auto;
 }
 
-  .score{
-    color: #fff;
-    margin-bottom: 10px;
-    font-size: 14px;
+#score {
+  color: #fff;
+  margin-bottom: 10px;
+  font-size: 14px;
+  text-shadow:
+        0 0 5px rgb(255, 255, 255),
+        0 0 10px rgb(0, 0, 0),
+        0 0 20px rgb(0, 0, 0);
 }
 
-  #button-reiniciar {
-    padding: 10px 20px;
-    font-size:14px;
-    background-color: #2a5298;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
+.caixa-jogo {
+  position: relative;
+  z-index: 1;
+  background: rgb(0, 63, 14);
+  padding: 20px;
+  border-radius: 20px;
+  text-align: center;
+  box-shadow: 0 0 20px rgba(5, 5, 5, 80);
+}
+.caixa-jogo h1 {
+  color: rgb(0, 255, 0);
+  margin-bottom: 20px;
+  margin-top: 15px;
+  font-size: 15px;
+  text-shadow:
+        0 0 5px rgb(0, 0, 0),
+        0 0 10px rgb(0, 0, 0),
+        0 0 20px rgb(0, 0, 0);
+
 }
 
-  #button-reiniciar:hover {
-    background-color: #1e3c72;
+#button-reiniciar {
+  padding: 10px 20px;
+  font-size: 10px;
+  font-family: 'Press Start 2P', monospace;
+  
+  background-color: #002c02;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.4s;
+  text-shadow:
+        0 0 5px rgb(255, 255, 255),
+        0 0 10px rgb(0, 0, 0),
+        0 0 20px rgb(0, 0, 0);
+}
 
+#button-reiniciar:hover {
+  background-color: #008015;
 }
